--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -248,3 +248,58 @@ div.dataTables_wrapper div.dataTables_info {
     border-top-right-radius: 10px !important;
     background-color: #F8F7F7 !important;
 }
+
+/* banner-wrap */
+.banner-wrap {display:flex;}
+.banner-wrap .banner-area {flex:1;padding:0 30px 0 10px;}
+.banner-wrap .banner-select {width:calc((100% - 111px) / 3 + 41px);padding:0 10px 0 30px;border-left:1px solid #ededed;}
+.banner-wrap .banner-area .banner-list {display:flex;flex-wrap:wrap;}
+.banner-wrap .banner-area .banner-list .banner {width:calc(50% - 15px);}
+.banner-wrap .banner-area .banner-list .nodata.banner {}
+.banner-wrap .banner-area .banner-list .banner:nth-child(odd) {margin-right:15px;}
+.banner-wrap .banner-area .banner-list .banner:nth-child(even) {margin-left:15px;}
+.banner-wrap .tit {display:flex;justify-content:space-between;align-items:center;height:48px;padding-bottom:10px;border-bottom: 1px solid #ededed;}
+.banner-wrap .tit strong {font-size: 16px;color: #2c3e50;}
+.banner-wrap .banner-list .banner {margin-top:30px;}
+.banner-wrap .banner-list .banner .stit {display:flex;justify-content:space-between;align-items:center;height:24px;margin-bottom:8px;}
+.banner-wrap .banner-list .banner .stit span {flex:1;;line-height:1.2rem;display:-webkit-inline-box!important;-webkit-box-orient:vertical!important;overflow:hidden!important;text-overflow:ellipsis!important;vertical-align:top;-webkit-line-clamp:2;}
+.banner-wrap .paging {margin-top:30px}
+.nodata {border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:16px;width:100%;height:150px;margin-top:15px;background-color:#f7f7f7;}
+.nodata p {margin-bottom:0;}
+@media (max-width: 992px) {
+    .banner-wrap {
+        display: block;
+    }
+
+    .banner-wrap .banner-area {
+        padding: 0;
+    }
+
+    .banner-wrap .banner-select {
+        width: 100%;
+        padding: 30px 0 0;
+        border-left: 0;
+    }
+
+    .banner-wrap .banner-area {
+        display: block !important;
+    }
+
+    .banner-wrap .banner-area .banner-list {
+        display: block;
+    }
+
+    .banner-wrap .banner-area .banner-list .banner {
+        width: 100%;
+        margin-left: 0 !important;
+        margin-right: 0 !important
+    }
+
+    .banner-wrap .banner-list .banner {
+        margin-top: 20px;
+    }
+
+    .banner-wrap .paging {
+        margin-top: 20px
+    }
+}
