--- a/module-admin/src/main/resources/templates/layout/head.html
+++ b/module-admin/src/main/resources/templates/layout/head.html
@@ -2,7 +2,7 @@
 <th:block th:fragment="head">
     <head>
         <meta charset="UTF-8">
-        <title>관리자 1:1 문의</title>
+        <title>새식일기</title>
         <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 10]>
@@ -17,7 +17,7 @@
         <meta name="keywords" content="Admin , Responsive, Landing, Bootstrap, App, Template, Mobile, iOS, Android, apple, creative app">
         <meta name="author" content="#">
         <!-- Favicon icon -->
-        <link rel="icon" th:href="@{/files/assets/images/favicon.ico}" type="image/x-icon">
+        <link rel="icon" th:href="@{/files/assets/images/fafvicon1.png}" type="image/x-icon">
         <!-- Google font-->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
         <!-- Required Fremwork -->
