feat: 탭 화면 구성 및 url 매핑

--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -201,7 +201,7 @@
 
                     $.ajax({
                         type: 'get',
-                        url: `/admin/members/${selectedMemberId}/form`,
+                        url: `/admin/members/${selectedMemberId}`,
                         dataType: 'html'
                     }).done(function (response) {
                         $('#contentPanel').html(response);
